# IMPALA

./: PKGBUILD  README.md  actions.py  aur.py  cli.py  display.py  pacman.py  pyproject.toml  requirements.txt
README_media/: README.txt
